@@ -99,5 +99,6 @@ clean {
 }
 
 test {
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 	useJUnitPlatform() // JUnit 5(및 이후 버전) 실행을 위해 필수
 }
